--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="main-header">
         <nav>
             <a href="index.html">
                 <img src="img/logo-index.png" alt="Логотип барбершопа" width="371" height="155">
@@ -20,7 +20,9 @@
                 <li><a href="catalog.html">Магазин</a></li>
                 <li><a href="blank.html">Контакты</a></li>
             </ul>
-            <a href="blank.html">Вход</a>
+            <div>
+                <a href="blank.html">Вход</a>
+            </div> 
         </nav>
     </header>
     
